--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
 
     <color name="cardColorCue">#FFECB3</color>
     <color name="cardColorResponse">#DCEDC8</color>
+
+    <color name="dividerColor">#1F000000</color>
+    <color name="bottom_sheet_color">#FAFAFA</color>
 </resources>
