--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
 
     <dimen name="collapsed_game_control_height">50dp</dimen>
     <dimen name="game_status_elevation">3dp</dimen> <!-- Above the game cards -->
+
+    <dimen name="score_list_item_height">48dp</dimen>
+    <dimen name="score_list_item_width">144dp</dimen>
+    <dimen name="score_list_item_position_margin_start">16dp</dimen>
+    <dimen name="score_list_item_score_margin_start">72dp</dimen>
 </resources>
