--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -48,7 +48,7 @@
     </RelativeLayout>
 
     <!-- Game layout -->
-    <GridLayout
+    <android.support.v7.widget.GridLayout
         android:id="@+id/game_board_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -59,7 +59,7 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:visibility="invisible"
         tools:visibility="visible">
-    </GridLayout>
+    </android.support.v7.widget.GridLayout>
 
     <!-- Game status and controls -->
     <RelativeLayout
