--- a/app/src/main/res/layout/game_card_contents.xml
+++ b/app/src/main/res/layout/game_card_contents.xml
@@ -9,6 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:ellipsize="end"
+        android:layout_margin="8dp"
         tools:text="Card text" />
 
 </merge>
