--- a/app/src/main/res/layout/game_card.xml
+++ b/app/src/main/res/layout/game_card.xml
@@ -2,8 +2,10 @@
 <blue.aodev.memory.activities.game.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:grid="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="0dp"
     android:layout_height="0dp"
+    card_view:cardElevation="0dp"
     grid:layout_rowWeight="1"
     grid:layout_columnWeight="1"
     android:layout_margin="8dp" />
