--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,10 @@
 <resources>
     <color name="colorPrimary">#FFC107</color>
     <color name="colorPrimaryDark">#FFA000</color>
-    <color name="colorAccent">#B2FF59</color>
+    <color name="colorAccent">#40C4FF</color>
 
     <color name="cardColorCue">#FFECB3</color>
-    <color name="cardColorResponse">#DCEDC8</color>
+    <color name="cardColorResponse">#B3E5FC</color>
 
     <color name="dividerColor">#1F000000</color>
     <color name="bottom_sheet_color">#FAFAFA</color>
